--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   flutter_webrtc: ^0.8.5
+  web_socket_channel: ^2.1.0
 
 dev_dependencies:
   flutter_test:
