--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_webrtc: ^0.8.5
   web_socket_channel: ^2.1.0
   mqtt_client: ^9.6.7
+  firebase_core: ^1.15.0
 
 dev_dependencies:
   flutter_test:
