--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,3 +39,8 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
   end
 end
+
+target 'Notification' do
+  use_frameworks!
+  pod 'Firebase/Messaging'
+end
