--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   mqtt_client: ^9.6.7
   firebase_core: ^1.15.0
   firebase_messaging: ^11.2.14
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
