--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -42,7 +42,7 @@ jobs:
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
       - name: build ios app
-        run: flutter build ipa
+        run: flutter build ipa --export-options-plist=$(pwd)/ios/ExportOptions.plist
       - name: Clean up keychain and provisioning profile
         if: ${{ always() }}
         run: |
