--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -1,15 +1,15 @@
-<?xml version=”1.0" encoding=”UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC “-//Apple//DTD PLIST 1.0//EN” “http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version=”1.0">
+<plist version="1.0">
 <dict>
-<key>method</key>
-<string>app-store</string>
-<key>teamID</key>
-<string>3QLZPMLJ3W</string>
-<key>provisioningProfiles</key>
-<dict>
-<key>com.dieklingel.app</key>
-<string>com dieklingel app Release</string>
-</dict>
+	<key>method</key>
+	<string>app-store</string>
+	<key>teamID</key>
+	<string>3QLZPMLJ3W</string>
+	<key>provisioningProfiles</key>
+	<dict>
+		<key>com.dieklingel.app</key>
+		<string>build_pp.mobileprovision</string>
+	</dict>
 </dict>
 </plist>
