--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -2,7 +2,7 @@ name: build-ipa
 on:
   push:
     branches: 
-      - ios-deploy
+      - ios-deploy1
 jobs:
   build-ipa:
     runs-on: macos-latest
