--- a/.github/workflows/build-webapp.yml
+++ b/.github/workflows/build-webapp.yml
@@ -17,8 +17,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '2.18.0'
-          channel: 'master'
+          flutter-version: '3.0.5'
+          channel: 'stable'
       - run: flutter pub get
       - run: flutter build web
       - run: echo "app.dieklingel.de" > build/web/CNAME
