--- a/.github/workflows/check-version-number.yml
+++ b/.github/workflows/check-version-number.yml
@@ -9,12 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: | 
-        VERSION_TAG=v$(cat pubspec.yaml | grep -Po '(?<=version:\s)(.*)')
-        TAG_FOUND=$(git tag -l | grep $VERSION_TAG)
-        if [ -n "$TAG_FOUND" ]; then
-          exit 1
-        fi
+      - name: check version number
+        run: | 
+          VERSION_TAG=v$(cat pubspec.yaml | grep -Po '(?<=version:\s)(.*)')
+          TAG_FOUND=$(git tag -l | grep $VERSION_TAG)
+          if [ -n "$TAG_FOUND" ]; then
+            exit 1
+          fi
         
-        
-
