--- a/.github/workflows/check-version-number.yml
+++ b/.github/workflows/check-version-number.yml
@@ -10,12 +10,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: check version numbert
         run: |
-            echo $(grep --version)
             VERSION_TAG=v$(cat pubspec.yaml | grep -Po '(?<=version:\s)(.*)')
-            TAG_FOUND=$(git tag -l | grep $VERSION_TAG)
-            if [ -n "$TAG_FOUND" ]; then
-              echo "Version number already exists"
-              exit 2
+            TAG_FOUND=$(git tag -l | grep -c $VERSION_TAG)
+            if [ "$TAG_FOUND" -eq "0" ]; then
+              exit 0
             fi
-            exit 0
+            echo "Version number already exists"
+            exit 1
         
