--- a/.github/workflows/check-version-number.yml
+++ b/.github/workflows/check-version-number.yml
@@ -13,6 +13,7 @@ jobs:
             VERSION_TAG=v$(cat pubspec.yaml | grep -Po '(?<=version:\s)(.*)')
             TAG_FOUND=$(git tag -l | grep -c $VERSION_TAG || true)
             if [ "$TAG_FOUND" -eq "0" ]; then
+              echo $TAG_FOUND
               exit 0
             fi
             echo "Version number already exists"
