--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_messaging: ^12.0.2
   shared_preferences: ^2.0.15
   provider: ^6.0.3
+  crypto: ^3.0.2
 
 dev_dependencies:
   flutter_test:
