🏗 BUILD: configure android build settings

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,8 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 31 //flutter.compileSdkVersion
+    compileSdkVersion 33 // flutter.compileSdkVersion
+    ndkVersion flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -47,8 +48,10 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.dieklingel.app"
-        minSdkVersion 23 //flutter.minSdkVersion
-        targetSdkVersion 31 //flutter.targetSdkVersion
+        // You can update the following values to match your application needs.
+        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
+        minSdkVersion 23 // flutter.minSdkVersion
+        targetSdkVersion 33 // flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
