--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,10 +28,10 @@
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSCameraUsageDescription</key>
-	<string>Camera Usage!</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Microphone Usage!</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
