--- a/.github/workflows/build-webapp.yaml
+++ b/.github/workflows/build-webapp.yaml
@@ -20,6 +20,7 @@ jobs:
           flutter-version: '3.0.5'
           channel: 'stable'
       - run: flutter pub get
+      - run: flutter test
       - run: flutter build web
       - run: echo "app.dieklingel.de" > build/web/CNAME
       - uses: s0/git-publish-subdir-action@develop
