--- a/.github/workflows/check-build.yaml
+++ b/.github/workflows/check-build.yaml
@@ -6,10 +6,14 @@ on:
       - main
       - development
 jobs:
-  build-flutter:
+  check-build:
     runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          java-version: '17'
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.3.3'
