🏗 BUILD: remove ipa build action

--- a/.github/workflows/check-build.yaml
+++ b/.github/workflows/check-build.yaml
@@ -7,7 +7,7 @@ on:
       - development
 jobs:
   check-build:
-    runs-on: macOS-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
@@ -22,4 +22,3 @@ jobs:
       - run: flutter test
       - run: flutter build web
       - run: flutter build apk
-      - run: flutter build ipa --no-codesign
