--- a/.github/workflows/check-tests.yaml
+++ b/.github/workflows/check-tests.yaml
@@ -1,5 +1,5 @@
 
-name: check-build
+name: check-tests
 on:
   pull_request:
     branches:
@@ -7,18 +7,12 @@ on:
       - development
 jobs:
   check-build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '17'
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.3.3'
           channel: 'stable'
       - run: flutter pub get
       - run: flutter test
-      - run: flutter build web
-      - run: flutter build apk
