--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.0.15
   provider: ^6.0.3
   crypto: ^3.0.2
+  audio_session: ^0.1.10
 
 dev_dependencies:
   flutter_test:
