--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   provider: ^6.0.3
   crypto: ^3.0.2
   audio_session: ^0.1.10
-  mqtt5_client: ^3.3.2
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
