--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   callkeep: ^0.3.2
   objectdb: ^1.2.1+1
   path_provider: ^2.0.11
+  enough_platform_widgets: ^0.5.0
 
 dev_dependencies:
   flutter_test:
