--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path_provider: ^2.0.11
   enough_platform_widgets: ^0.5.0
   flutter_voip_kit: ^0.0.6
+  flutter_local_notifications: ^12.0.2
 
 dev_dependencies:
   flutter_test:
