--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   enough_platform_widgets: ^0.5.0
   flutter_voip_kit: ^0.0.6
   flutter_local_notifications: ^12.0.2
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
