--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_webrtc: ^0.9.8
-  web_socket_channel: ^2.1.0
   mqtt_client: ^9.6.7
   firebase_core: ^1.15.0
   firebase_messaging: ^13.0.4
@@ -51,12 +50,14 @@ dependencies:
   flutter_voip_kit: ^0.0.6
   flutter_local_notifications: ^12.0.2
   url_launcher: ^6.1.6
+  flutter_markdown: ^0.6.12
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   test: ^1.21.4
   mockito: ^5.3.2
+  flutter_oss_licenses: ^2.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
