--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,17 @@ dependencies:
   objectdb: ^1.2.1+1
   path_provider: ^2.0.11
   enough_platform_widgets: ^0.5.0
-  flutter_voip_kit: ^0.0.6
+  # flutter_voip_kit: ^0.0.6
+  flutter_voip_kit:
+    # use path for local development only
+    path: ./../flutter_voip_kit
+    # git:
+    #  url: https://github.com/KoiFresh/flutter_voip_kit.git
   flutter_local_notifications: ^12.0.2
   url_launcher: ^6.1.6
   flutter_markdown: ^0.6.12
+  pull_down_button: ^0.3.1
+  modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
   flutter_test:
