--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   url_launcher: ^6.1.6
   flutter_markdown: ^0.6.12
   pull_down_button: ^0.3.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +67,8 @@ dev_dependencies:
   test: ^1.21.4
   mockito: ^5.3.2
   flutter_oss_licenses: ^2.0.1
+  build_runner: ^2.3.0
+  hive_generator: ^1.1.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
