--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ dependencies:
   pull_down_button: ^0.3.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  get_it: ^7.2.0
+  injectable: ^2.1.0
+  get_it_mixin: ^3.1.4+2
+  
 
 
 dev_dependencies:
@@ -69,6 +73,7 @@ dev_dependencies:
   flutter_oss_licenses: ^2.0.1
   build_runner: ^2.3.0
   hive_generator: ^1.1.3
+  injectable_generator: ^2.1.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
