--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -21,6 +21,9 @@ jobs:
       - name: Install Pubs
         run: flutter pub get
 
+      - name: Run Build Runner
+        run: flutter pub run build_runner build
+
       - name: Run Tests
         run: flutter test
 
@@ -39,6 +42,9 @@ jobs:
       
       - name: Install Pubs
         run: flutter pub get
+
+      - name: Run Build Runner
+        run: flutter pub run build_runner build
 
       - name: Run Tests
         run: flutter build web --release
@@ -59,6 +65,9 @@ jobs:
       - name: Install Pubs
         run: flutter pub get
 
+      - name: Run Build Runner
+        run: flutter pub run build_runner build
+
       - name: Run Tests
         run: flutter build apk --release
 
@@ -77,6 +86,9 @@ jobs:
       
       - name: Install Pubs
         run: flutter pub get
+
+      - name: Run Build Runner
+        run: flutter pub run build_runner build
 
       - name: Run Tests
         run: flutter build ios --release --no-codesign
