--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+14
 
 environment:
-  sdk: ">=2.17.0-44.0.dev <3.0.0"
+  sdk: ">=2.18.6 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,21 +36,25 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_webrtc: ^0.9.8
   mqtt_client: ^9.6.7
-  firebase_core: ^1.15.0
-  firebase_messaging: ^13.0.4
-  shared_preferences: ^2.0.15
+  firebase_core: ^2.6.1
+  firebase_messaging: ^14.2.4
   provider: ^6.0.3
   crypto: ^3.0.2
   audio_session: ^0.1.10
   uuid: ^3.0.6
-  dismissible_page: ^0.7.3
-  enough_platform_widgets: ^0.5.0
-  flutter_local_notifications: ^12.0.2
+  dismissible_page: ^1.0.1
+  enough_platform_widgets: ^0.7.1
+  flutter_local_notifications: ^13.0.0
   url_launcher: ^6.1.6
   flutter_markdown: ^0.6.12
-  pull_down_button: ^0.3.1
+  pull_down_button: ^0.5.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  dieklingel_core_shared:
+    git:
+      url: https://github.com/KoiFresh/dieklingel-core.git
+      ref: shared
+      path: packages/shared
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +63,7 @@ dev_dependencies:
   mockito: ^5.3.2
   flutter_oss_licenses: ^2.0.1
   build_runner: ^2.3.0
-  hive_generator: ^1.1.3
+  hive_generator: ^2.0.0
   injectable_generator: ^2.1.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
