--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
       url: https://github.com/KoiFresh/dieklingel-core.git
       ref: shared
       path: packages/shared
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
