--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
       ref: shared
       path: packages/shared
   rxdart: ^0.27.7
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
