--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
       path: packages/shared
   rxdart: ^0.27.7
   get_it: ^7.2.0
+  flutter_callkit_incoming: ^1.0.3+3
 
 dev_dependencies:
   flutter_test:
