👌 feat: rename build-webapp to deploy webapp

--- a/.github/workflows/deploy-webapp.yaml
+++ b/.github/workflows/deploy-webapp.yaml
@@ -1,11 +1,11 @@
 
-name: build-webapp
+name: deploy-webapp
 on:
   push:
     branches:
       - main
 jobs:
-  build-flutter:
+  deploy-webapp:
     runs-on: ubuntu-latest
     env:
         REPO: self
