--- a/.github/workflows/deploy-ios-app.yaml
+++ b/.github/workflows/deploy-ios-app.yaml
@@ -19,15 +19,20 @@ jobs:
         env:
           APPLE_DISTRIBUTION_CERTIFICATE: ${{ secrets.APPLE_DISTRIBUTION_CERTIFICATE }}
           APPLE_DISTRIBUTION_CERTIFICATE_PW: ${{ secrets.APPLE_DISTRIBUTION_CERTIFICATE_PW }}
+          PROVISIONING_PROFILE: ${{ secrets.PROVISIONING_PROFILE }}
           KEYCHAIN_PW: ${{ secrets.KEYCHAIN_PW }}
         run: |
           # import certificates
           echo $APPLE_DISTRIBUTION_CERTIFICATE | base64 --decode --output certificate.p12
+          echo $PROVISIONING_PROFILE | base64 --decode --output profile.mobileprovision
           security create-keychain -p "$KEYCHAIN_PW" build.keychain
           security default-keychain -s build.keychain
           security unlock-keychain -p "$KEYCHAIN_PW" build.keychain
           security import certificate.p12 -k build.keychain -P $APPLE_DISTRIBUTION_CERTIFICATE_PW -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PW" build.keychain
+          # profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles
 
       - name: Install Pubs
         run: flutter pub get
@@ -39,3 +44,4 @@ jobs:
         if: ${{ always() }}
         run: |
           security delete-keychain build.keychain
+          rm ~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision
