--- a/.github/workflows/deploy-ios-app.yaml
+++ b/.github/workflows/deploy-ios-app.yaml
@@ -20,19 +20,23 @@ jobs:
           APPLE_DISTRIBUTION_CERTIFICATE: ${{ secrets.APPLE_DISTRIBUTION_CERTIFICATE }}
           APPLE_DISTRIBUTION_CERTIFICATE_PW: ${{ secrets.APPLE_DISTRIBUTION_CERTIFICATE_PW }}
           PROVISIONING_PROFILE: ${{ secrets.PROVISIONING_PROFILE }}
+          PROVISIONING_PROFILE_IMAGE_NOTIFICATION: ${{ secrets.PROVISIONING_PROFILE_IMAGE_NOTIFICATION }}
           KEYCHAIN_PW: ${{ secrets.KEYCHAIN_PW }}
         run: |
           # import certificates
           echo $APPLE_DISTRIBUTION_CERTIFICATE | base64 --decode --output certificate.p12
-          echo $PROVISIONING_PROFILE | base64 --decode --output profile.mobileprovision
+          echo $PROVISIONING_PROFILE | base64 --decode --output com_dieklingel_app.mobileprovision
+          echo $PROVISIONING_PROFILE_IMAGE_NOTIFICATION | base64 --decode --output com_dieklingel_app_ImageNotification.mobileprovision
           security create-keychain -p "$KEYCHAIN_PW" build.keychain
-          security default-keychain -s build.keychain
+          security set-keychain-settings -lut 21600 build.keychain
           security unlock-keychain -p "$KEYCHAIN_PW" build.keychain
-          security import certificate.p12 -k build.keychain -P $APPLE_DISTRIBUTION_CERTIFICATE_PW -T /usr/bin/codesign
-          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PW" build.keychain
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$APPLE_DISTRIBUTION_CERTIFICATE_PW" -A -t cert -f pkcs12 -k build.keychain
+          security list-keychain -d user -s build.keychain
           # profile
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles
+          cp com_dieklingel_app.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles
+          cp com_dieklingel_app_ImageNotification.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles
 
       - name: Install Pubs
         run: flutter pub get
@@ -44,4 +48,5 @@ jobs:
         if: ${{ always() }}
         run: |
           security delete-keychain build.keychain
-          rm ~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision
+          rm ~/Library/MobileDevice/Provisioning\ Profiles/com_dieklingel_app.mobileprovision
+          rm ~/Library/MobileDevice/Provisioning\ Profiles/com_dieklingel_app_ImageNotification.mobileprovision
