--- a/.github/workflows/deploy-ios-app.yaml
+++ b/.github/workflows/deploy-ios-app.yaml
@@ -15,7 +15,7 @@ jobs:
           flutter-version: '3.7.3'
           channel: 'stable'
 
-      - name: Install the Apple certificate and provisioning profile
+      - name: Install the signing certificate and provisioning profile
         env:
           APPLE_DISTRIBUTION_CERTIFICATE: ${{ secrets.APPLE_DISTRIBUTION_CERTIFICATE }}
           APPLE_DISTRIBUTION_CERTIFICATE_PW: ${{ secrets.APPLE_DISTRIBUTION_CERTIFICATE_PW }}
@@ -23,33 +23,30 @@ jobs:
           PROVISIONING_PROFILE_IMAGE_NOTIFICATION: ${{ secrets.PROVISIONING_PROFILE_IMAGE_NOTIFICATION }}
           KEYCHAIN_PW: ${{ secrets.KEYCHAIN_PW }}
           ISSUER_ID: ${{ secrets.ISSUER_ID }}
-          API_KEy: ${{ secrets.API_KEY }}
+          API_KEY: ${{ secrets.API_KEY }}
         run: |
           # import certificates
           echo $APPLE_DISTRIBUTION_CERTIFICATE | base64 --decode --output certificate.p12
           echo $PROVISIONING_PROFILE | base64 --decode --output pp.mobileprovision
           echo $PROVISIONING_PROFILE_IMAGE_NOTIFICATION | base64 --decode --output pp_ext.mobileprovision
-          security create-keychain -p $KEYCHAIN_PW build.keychain
-          security set-keychain-settings -lut 21600 build.keychain
-          security unlock-keychain -p $KEYCHAIN_PW build.keychain
+          # create keychain
+          security create-keychain -p $KEYCHAIN_PW build.keychain-db
+          security default-keychain -s build.keychain-db
+          # unlock keychain
+          security unlock-keychain -p $KEYCHAIN_PW build.keychain-db
           # import certificate to keychain
-          security import certificate.p12 -P $APPLE_DISTRIBUTION_CERTIFICATE_PW -A -t cert -f pkcs12 -k build.keychain
-          security list-keychain -d user -s build.keychain
-          # profile
+          security import certificate.p12 -k build.keychain-db -P $APPLE_DISTRIBUTION_CERTIFICATE_PW -T /usr/bin/codesign
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $KEYCHAIN_PW build.keychain-db
+          # provisioning profile
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp pp.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles
           cp pp_ext.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles
+          ls -a ~/Library/MobileDevice/Provisioning\ Profiles
 
-      - name: Install Pubs
+      - name: Install pubs
         run: flutter pub get
 
-      - name: Install Pods
-        run: |
-          cd ios
-          pod install
-          cd ../
-
-      - name: Build ipa in release mode
+      - name: Build and export ipa
         run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
 
       - name: Upload ipa to App Store Connect
@@ -59,6 +56,6 @@ jobs:
       - name: Clean up keychain and provisioning profile
         if: ${{ always() }}
         run: |
-          security delete-keychain build.keychain
+          security delete-keychain build.keychain-db
           rm ~/Library/MobileDevice/Provisioning\ Profiles/pp.mobileprovision
           rm ~/Library/MobileDevice/Provisioning\ Profiles/pp_ext.mobileprovision
