--- a/.github/workflows/deploy-ios-app.yaml
+++ b/.github/workflows/deploy-ios-app.yaml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Upload ipa to App Store Connect
         run: |
-          # xcrun altool --upload-app --type ios -f build/ios/ipa/dieklingel_app.ipa --apiKey $API_KEY --apiIssuer $ISSUER_ID
+          xcrun altool --upload-app --type ios -f build/ios/ipa/dieklingel_app.ipa --apiKey $API_KEY --apiIssuer $ISSUER_ID
 
       - name: Clean up keychain and provisioning profile
         if: ${{ always() }}
