--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+18
+version: 1.0.0+19
 
 environment:
   sdk: ">=2.18.6 <3.0.0"
@@ -53,7 +53,7 @@ dependencies:
   dieklingel_core_shared:
     git:
       url: https://github.com/KoiFresh/dieklingel-core.git
-      ref: shared
+      ref: main
       path: packages/shared
   rxdart: ^0.27.7
   get_it: ^7.2.0
