--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   get_it: ^7.2.0
   flutter_bloc: ^8.1.2
   pull_down_button: ^0.8.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
