--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,8 +52,8 @@ android {
         applicationId "com.dieklingel.app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion 23 // flutter.minSdkVersion
-        targetSdkVersion 33 // flutter.targetSdkVersion
+        minSdkVersion 24 // flutter.minSdkVersion
+        targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
