--- a/.github/workflows/deploy-ios-app.yaml
+++ b/.github/workflows/deploy-ios-app.yaml
@@ -1,10 +1,10 @@
 
-name: Build, sign and deploy the ios app to TestFlight.
+name: TestFlight
 on:
   push:
     branches:
       - main
-      - feature/ios-fastlane
+
 jobs:
   deploy-ios-app:
     runs-on: macos-latest
@@ -16,14 +16,13 @@ jobs:
           flutter-version: '3.7.3'
           channel: 'stable'
 
-      - name: Install the signing certificate and provisioning profile
+      - name: Build and Publish IPA to Testflight
         env:
-          APPLE_DISTRIBUTION_CERTIFICATE: ${{ secrets.APPLE_DISTRIBUTION_CERTIFICATE }}
-          APPLE_DISTRIBUTION_CERTIFICATE_PW: ${{ secrets.APPLE_DISTRIBUTION_CERTIFICATE_PW }}
-          PROVISIONING_PROFILE: ${{ secrets.PROVISIONING_PROFILE }}
-          PROVISIONING_PROFILE_IMAGE_NOTIFICATION: ${{ secrets.PROVISIONING_PROFILE_IMAGE_NOTIFICATION }}
-          KEYCHAIN_PW: ${{ secrets.KEYCHAIN_PW }}
+          API_KEY: ${{ secrets.API_KEY }}
+          API_KEY_ID: ${{ secrets.API_KEY_ID }}
+          ISSUER_ID: ${{ secrets.ISSUER_ID }}
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+          MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }}
         run: |
           cd ios
           fastlane beta
