--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_webrtc: ^0.9.25
+  # flutter_webrtc: 0.9.20
+  flutter_webrtc: 0.9.21
   firebase_core: ^2.6.1
   firebase_messaging: ^14.4.0
   audio_session: ^0.1.13
