--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,13 @@ dependencies:
   mqtt:
     git:
       url: https://github.com/KoiFresh/dieklingel-core.git
-      ref: feature/lib/mqtt
+      ref: fix/mqtt-lib-body-parser
       path: libraries/mqtt
   flutter_bloc: ^8.1.2
   pull_down_button: ^0.8.1
+  shelf_router: ^1.1.4
+  shelf: ^1.4.1
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
