--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   mqtt:
     git:
       url: https://github.com/KoiFresh/dieklingel-core.git
-      ref: fix/mqtt-lib-body-parser
+      ref: main
       path: libraries/mqtt
   flutter_bloc: ^8.1.2
   pull_down_button: ^0.8.1
