--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -15,9 +15,9 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.3'
-          channel: 'stable'
-      
+          flutter-version: "3.10.6"
+          channel: "stable"
+
       - name: Install Pubs
         run: flutter pub get
 
@@ -34,9 +34,9 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.3'
-          channel: 'stable'
-      
+          flutter-version: "3.10.6"
+          channel: "stable"
+
       - name: Install Pubs
         run: flutter pub get
 
@@ -53,9 +53,9 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.3'
-          channel: 'stable'
-      
+          flutter-version: "3.10.6"
+          channel: "stable"
+
       - name: Install Pubs
         run: flutter pub get
 
@@ -72,8 +72,8 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.3'
-          channel: 'stable'
+          flutter-version: "3.10.6"
+          channel: "stable"
 
       - name: Build and sign IPA package
         env:
