--- a/.github/workflows/deploy-ios-app.yaml
+++ b/.github/workflows/deploy-ios-app.yaml
@@ -1,4 +1,3 @@
-
 name: TestFlight
 on:
   push:
@@ -13,8 +12,8 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.3'
-          channel: 'stable'
+          flutter-version: "3.10.6"
+          channel: "stable"
 
       - name: Build and Publish IPA to Testflight
         env:
